--- a/vite-project/css/style.css
+++ b/vite-project/css/style.css
@@ -2,7 +2,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@200;300;400;500;600;700;800&display=swap");
 
 /* other css file imports */
-@import url("sections/header.css");
+@import url("Sections/header.css");
 @import url("sections/hero.css");
 @import url("sections/about.css");
 @import url("sections/popular.css");
